Bug #63380: Use PHP's allocator for libxml

The task is somewhat complicated by the fact that libxml does not use a
different hook for persistent and request-local allocations. So we use
the persistent allocator during MINIT, and take extra care to ensure
all libxml globals are initialised during MINIT, rather than
lazy-initialised on the first call to the relevant module.

The typical consequences of the initialisation of a global pointer
during request execution would be a dangling pointer after deactivate,
which is exploitable for memory corruption during subsequent requests. I
used gdb's "info variables" command to audit all global variables in
libxml, as configured in the Ubuntu package.

I tested the code with make test, and with server-tests.php
against Apache with "worker" MPM. I also tested it with and without
LIBXML_THREAD_ALLOC_ENABLED. There was a bug in libxml2 which prevented
it from working with LIBXML_THREAD_ALLOC_ENABLED. I submitted a patch:

https://bugzilla.gnome.org/show_bug.cgi?id=687084

That configuration option appears to be rarely used.